--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -1,7 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext{
+        build_tools_version = '29.0.3'
+        kotlin_version = '1.3.72'
+        moshi_version = '1.8.0'
+        retrofit_version = '2.6.2'
+        converter_moshi_version = '2.5.0'
+        kotlin_coroutines_version = '1.3.0'
+        kotlin_coroutines_adapter_version = '0.9.2'
+        picasso_version = '2.5.2'
+        room_version = '2.2.5'
+    }
     repositories {
         google()
         jcenter()
